--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Aitia is one of the three core sections making up the Ítí project, the other two being Nguasach and Ete. Its purpose is to implement the semantics of Ítí, a conlang inspired by I-Ching trigrams.
-The name Aitia comes from the Greek word αιτία, which sounds like Ítí and means "cause, reason", thus the origin of "etiology". It is named after this concept because it serves for constructing the semantics. It cannot exist without the life energy (~ goal, desire) that motivates the expression of linguistic forms.
+The name Aitia comes from the Greek word αιτία, which sounds like Ítí and means "cause, reason", thus the origin of "etiology". It is named after this concept because it serves to construct the meaning of linguistic forms. It cannot exist without the life energy (~ goal, desire) that motivates the expression of linguistic forms.
 The most important files in this project are imageProcessing and bayesianLearning.
 ImageProcessing is mainly designed for translating an image or a video into a series of syntax trees in Ítí. However, it is also capable of doing the operation in reverse: generating a video that simulates the possible meaning indicated by a syntax tree.
 BayesianLearning sees Ítí semantics as a cognitive model for learning meaning from videos. It tries to find the syntax tree (the hypothesis) that suits the video the most using a tree similarity algorithm. A series of trees are created based on each frame of the video using imageProcessing and are compared with the hypothesis syntax tree.
